Adding tools (Nodejs, Gulp, Bower and Composer)

--- a/7.1/jessie/apache/Dockerfile
+++ b/7.1/jessie/apache/Dockerfile
@@ -46,4 +46,15 @@ RUN chmod +x /tmp/install-composer.sh \
               pgsql \
               zip \
               opcache
-  ADD freetds.conf /etc/freetds/freetds.conf
+
+
+#install composer and other tools
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
+
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN apt-get install -y build-essential
+RUN apt-get install -y nodejs
+RUN /usr/bin/npm install -g gulp
+RUN /usr/bin/npm install -g bower
+
+ADD freetds.conf /etc/freetds/freetds.conf
