--- a/7.1/jessie/fpm/Dockerfile
+++ b/7.1/jessie/fpm/Dockerfile
@@ -46,4 +46,15 @@ RUN apt-get update && apt-get install -y \
           pgsql \
           zip \
           opcache
+
+
+#install composer and other tools
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
+
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN apt-get install -y build-essential
+RUN apt-get install -y nodejs
+RUN /usr/bin/npm install -g gulp
+RUN /usr/bin/npm install -g bower
+
 ADD freetds.conf /etc/freetds/freetds.conf
